iRedMail-1.6.3:
    * Supports new distribution release:
        - OpenBSD 7.3. Note: 7.1, 7.2 have been dropped.

    * SOGo Groupware is now available on Ubuntu 22.04. Thanks to SOGo team.
    * Disable TLSv1 and TLSv1.1 in Postfix. They're also disabled in Nginx
      and Dovecot.

    * Fixed issues:
        - [MariaDB] Missing index for SQL column `forwardings.forwarding`.
        - Missing Python module web.py on CentOS/Rocky/AlmaLinux.
        - FreeBSD ports tree is now up to date, main packages are updated:
            - MariaDB 10.6
            - PostgreSQL 15
            - OpenLDAP 2.6
            - PHP 8.1
            - Python 3.9
            - Perl 5.36

    * Updated packages:
        + Roundcube -> 1.6.1
        + iRedAPD -> 5.3
        + mlmmjadmin -> 3.1.7
        + iRedAdmin -> 2.3
        + netdata -> 1.39.1
        + fail2ban -> 1.0.2 (OpenBSD)

iRedMail-1.6.2:
    * Supports new distribution release:
        - CentOS Stream 9
        - Rocky Linux 9
        - Alma Linux 9

    * Improvements:
        - [Roundcube] Enables separate management interface for mail forwardings.

iRedMail-1.6.1:
    * Supports new distribution release:
        + OpenBSD 7.1

    * Improvements:
        - [Postfix] Bypass more facebook mail server HELOs.
          Thanks damiandabrowski5@GitHub for the contribution.

    * Fixed:
        - Not enable iRedAPD plugin 'sql_ml_access_policy' for SQL backends by
          default.
          Thanks Gavin for the feedback.
        - [SOGo] Not expand mailing list members while inviting a mailing
          list in event.
        - [SOGo] It's now disabled on Ubuntu 22.04 due to SOGo team doesn't
          offer binary packages yet.
        - [SOGo] New official yum/apt repo site.
        - [CentOS] Not install cyrus-sasl packages which causes Postfix
          doesn't support PLAIN auth.

    * Updated packages:
        + netdata -> 1.36.1
        + iRedAPD -> 5.1
        + iRedAdmin -> 1.8