@@ -36,6 +36,9 @@ if [ X"${DISABLE_WEB_SERVER}" != X'YES' ]; then
     if [ X"${DISTRO}" == X"RHEL" -a X"${DISTRO_VERSION}" == X'9' ]; then
         # SOGo team doesn't offer binary packages yet.
         export DIALOG_SELECTABLE_SOGO='NO'
+    elif [ X"${DISTRO}" == X"DEBIAN" -a X"${DISTRO_VERSION}" == X'12' ]; then
+        # SOGo team doesn't offer binary packages yet.
+        export DIALOG_SELECTABLE_SOGO='NO'
     elif [ X"${DISTRO}" == X'OPENBSD' ]; then
         # OpenBSD doesn't have 'libuuid' which required by netdata
         export DIALOG_SELECTABLE_NETDATA='NO'
