@@ -34,7 +34,7 @@
 
     # determines the amount of disk space in MiB that is dedicated to storing
     # netdata metric values and all related metadata describing them.
-    dbengine disk space = 256
+    dbengine disk space = 1024
 
     # Bind to 127.0.0.1 by default.
     bind to = 127.0.0.1
