@@ -1,3 +1,14 @@
+iRedMail-1.6.4:
+    * Supports new distribution release:
+        - Debian 12 (Bookworm). Note: Both Debian 11 and 12 are supported, but
+          12 is now recommended.
+
+            Note: SOGo Groupware is not yet available on Debian 12 because SOGo
+            team does not offer binary packages for Debian 12 yet.
+
+    * Fixed issues:
+        - Incorrect ssl ca file in Postfix.
+
 iRedMail-1.6.3:
     * Supports new distribution release:
         - OpenBSD 7.3. Note: 7.1, 7.2 have been dropped.
